Prevent wrapping of short claim names

--- a/jwt-panel.css
+++ b/jwt-panel.css
@@ -4,6 +4,7 @@ td:first-child {
   text-align: right;
   vertical-align: text-top;
   padding-right: 0.5em;
+  min-width: 70px;
   max-width: 50%;
   overflow-wrap: anywhere;
 }
